--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -5,17 +5,18 @@
     android:id="@+id/mobile_navigation"
     app:startDestination="@+id/navigation_upcoming">
 
-    <fragment
-        android:id="@+id/navigation_reminder"
-        android:name="com.anand.remtas.ui.reminder.ReminderFragment"
-        android:label="Reminder"
-        tools:layout="@layout/fragment_reminder" />
 
     <fragment
         android:id="@+id/navigation_upcoming"
         android:name="com.anand.remtas.ui.upcoming.UpcomingFragment"
         android:label="Upcoming"
         tools:layout="@layout/fragment_upcoming" />
+
+    <fragment
+        android:id="@+id/navigation_reminder"
+        android:name="com.anand.remtas.ui.reminder.ReminderFragment"
+        android:label="Reminder" />
+
 
     <fragment
         android:id="@+id/navigation_alarm"
